<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Dhis2</string>
    <string name="logo_text">dhis</string>
    <string name="logo_number">2</string>
    <string name="tab" translatable="false">\u0009</string>
    <string name="default_notification_channel_id" translatable="false">20180901</string>
    <string name="error">Error</string>
    <plurals name="error_message">
        <item quantity="one">Error</item>
        <item quantity="other">Errors</item>
    </plurals>
    <string name="error_wrong_server_url">Wrong server url</string>
    <string name="error_wrong_credentials">Wrong credentials</string>
    <string name="error_unexpected_error">Unexpected error</string>
    <string name="error_internal_server_error">Internal server error</string>
    <string name="no_value">no value</string>
    <string name="no_reserved_values">There are no more reserved values. Contact your system administrator</string>
    <string name="no_reserved_values_connection">There are no more reserved values. Connect to the network to refill them</string>
    <string name="errors">errors</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="sync_now">Synchronise now</string>
    <string name="sync_text">Synchronising with server</string>
    <string name="sync_title">Syncing now</string>
    <string name="sync_metadata">Metadata</string>
    <string name="sync_events">Events</string>
    <string name="sync_tei">Tracked entities</string>
    <string name="sync_complete_title">Finished</string>
    <string name="sync_complete_text">Sync complete</string>
    <string name="sync_error_title">Sync Error</string>
    <string name="sync_error_text">An error has occurred during synchronisation. Please retry.</string>
    <string name="sync_incomplete_error_text">Sync finished but we did not receive server confirmation for all records. Those record are still marked as "offline" in the App. We recommend to retry the synchronization.</string>
    <string name="metadata_sync_error">FAIL: Something went wrong in the sync process. If you have connection please try again. If the error persist, contact your administrator.</string>
    <string name="data_sync_warning">WARNING: Most of your data is synced but some fields presented conflicts. Sync your configuration and try again. Check their sync status: programs, TEI\'s and events with conflicts are marked as @.</string>
    <string name="data_sync_warning_program">WARNING: Most of your data is synced but some fields presented conflicts. Sync your configuration and try again. If warning persists, check their sync status: programs, TEI\'s and events with conflicts are marked as @.</string>
    <string name="data_sync_error">ERROR: Some of your data failed to sync. Check their sync status: programs with errors are marked as @, TEI\'s and events as $".</string>
    <string name="data_sync_error_program">ERROR: Some of your data failed to sync. Check their sync status: TEI\'s and events with conflicts are marked as $".</string>
    <string name="server_sync_error">There was an error and the server did not respond. Contact your administrator.</string>
    <string name="search_result_text">%s results found</string>
    <string name="add_new">Add new</string>
    <string name="add">Add</string>
    <string name="enter_event_data">Enter %s</string>
    <string name="enter_cancel_event_data">Enter / Skip %s</string>
    <string name="schedule_new">Schedule new</string>
    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</string>
    <string name="referral">Referral</string>
    <string name="url_hint">Server url</string>
    <string name="user_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="unlock_button">Unlock session</string>
    <string name="syncing_configuration">Syncing your Configuration</string>
    <string name="syncing_data_shortly">Your Data will shortly be synced</string>
    <string name="syncing_data">Syncing your Data</string>
    <string name="configuration_ready">Your Configuration is ready</string>
    <string name="data_ready">Your Data is ready</string>
    <string name="configuration_sync_failed">Configuration sync failed</string>
    <string name="data_sync_failed">Data sync failed</string>
    <string name="account_recovery">Account recovery</string>
    <string name="no_network_to_recover_account">A network connection is needed to recover your account.</string>
    <string name="DAILY">Daily</string>
    <string name="WEEKLY">Weekly</string>
    <string name="MONTHLY">Monthly</string>
    <string name="YEARLY">Yearly</string>
    <string name="clear_filters">Clear filters</string>
    <string name="action_accept">Accept</string>
    <string name="action_share_zero_items">Share</string>
    <string name="action_share_single_item">Share %d item</string>
    <string name="action_share_multiple_item">Share %d items</string>
    <string name="search">Search</string>
    <string name="search_add_new_te_type">Search / Add new %s</string>
    <string name="search_te_type">Search for %s</string>
    <string name="add_te_type">Add new %s</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_long_text">Enter long text</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_integer">Enter integer</string>
    <string name="enter_negative_integer">Enter negative integer</string>
    <string name="enter_positive_integer_or_zero">Enter positive integer or zero</string>
    <string name="enter_positive_integer">Enter positive integer</string>
    <string name="filter_options">Filter options</string>
    <string name="choose_date">Choose date</string>
    <string name="change_calendar">Change calendar</string>
    <string name="program_completed">Program Completed</string>
    <string name="program_inactive">Program inactive</string>
    <string name="event_open">Open</string>
    <string name="event_not_completed">Not completed</string>
    <string name="event_completed">Event completed</string>
    <string name="read_only">Read only</string>
    <string name="finish_and_complete">Finish and complete</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="re_open">Re-open</string>
    <string name="re_open_form">Re-open form</string>
    <string name="activate">Activate</string>
    <string name="active">Active</string>
    <string name="state_synced">Sync</string>
    <string name="state_to_post">To send</string>
    <string name="state_to_update">To update</string>
    <string name="state_to_delete">To delete</string>
    <string name="state_error">Error</string>
    <string name="action_sync">SYNC</string>
    <string name="action_send">SEND</string>
    <string name="action_sync_sms">SYNC SMS</string>
    <string name="completion">Completion</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="date">Date</string>
    <string name="org_unit">Org unit</string>
    <string name="no_org_units">There aren\'t any open Organization Units for the selected date. Please select another date or another Organisation Unit.</string>
    <string name="category_option">Category option</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="new_event">New event</string>
    <string name="fake_program_stage_description" translatable="false">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</string>
    <string name="one_time">One time</string>
    <string name="permanent">Permanent</string>
    <string name="report_period">Report period</string>
    <string name="cat_option">Cat option</string>
    <string name="field_required">If you set a value, the whole row needs all of values to complete the Data Set.</string>
    <string name="field_mandatory">Some values required are missing. You need set mandatory values to complete the Data Set.</string>
    <string name="field_mandatory_v2">There are missing mandatory fields. Please, fill them to complete the data set.</string>
    <string name="datavalue_saved">Value is saved!</string>
    <string name="there_is_no_available_period">There is no available periods to select.</string>
    <string name="due_date">Due date</string>
    <string name="next_event">Next %1$s</string>
    <string name="cat_combo">Cat combo</string>
    <string name="date_default">DD/MM/YYYY</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="block_session">Block Session</string>
    <string name="fifteen_minute">15 Minutes</string>
    <string name="a_hour">1 Hour</string>
    <string name="a_day">1 Day (Default)</string>
    <string name="Automatic_Sync_Data">Automatic Sync Data every:</string>
    <string name="Manual">Manual</string>
    <string name="Automatic_Sync_Metadata">Automatic Sync Configuration every:</string>
    <string name="a_week">1 Week</string>
    <string name="SYNC_DATA">SYNC Data Now</string>
    <string name="SYNC_META">SYNC Configuration Now</string>
    <string name="SYNC_MANAGER">Settings</string>
    <string name="last_data_sync_date">Last sync on: %s</string>
    <string name="last_metadata_sync_date">Last sync on: %s</string>
    <string name="settings_sms_module_title">SMS module:</string>
    <string name="settings_sms_receiver_number">SMS gateway</string>
    <string name="settings_sms_receiver_number_hint">number</string>
    <string name="settings_sms_module_switch">Enable SMS submission</string>
    <string name="write_new_note">Write new note</string>
    <string name="clear">clear</string>
    <string name="add_note">Add note</string>
    <string name="hint_day">Days</string>
    <string name="hint_month">Months</string>
    <string name="hint_year">Years</string>
    <string name="QR_SCANNER">Import QR data</string>
    <string name="about">About</string>
    <string name="about_app">App Version: %s</string>
    <string name="about_sdk">SDK Version: %s</string>
    <string name="about_connected">Connected to: %s</string>
    <string name="about_user">Current user: %s</string>
    <string name="about_more">More about this app: read <a href="https://drive.google.com/open?id=1YHRBk6LSp6uROfs19-wCfQGc-rgl2f5iDrhCDasTR8M">here</a> what\'s supported and what\'s not supported</string>
    <string name="about_git">This and previous versions of this application, as well as the source code are available at <a href="https://github.com/dhis2/dhis2-android-capture-app">GitHub</a>. DHIS2 Android Capture is licensed under the terms of the GNU General Public License as published by the Free Software Foundation - see <a href="http://www.gnu.org/licenses/gpl-3.0.html">http://www.gnu.org/licenses/gpl-3.0.html</a>.</string>
    <string name="about_dev">Developed and maintained by the <a href="https://www.dhis2.org/">DHIS2</a> project, part of University of Oslo, <a href="https://www.mn.uio.no/ifi/english/">department of informatics</a>.</string>
    <string name="about_contact">For more information or questions about this application, please write to <a href="mailto:android@dhis2.org">android@dhis2.org</a></string>
    <string name="menu_home">Home</string>
    <string name="complete_add_new"><![CDATA[Complete & add new]]></string>
    <string name="complete_later">Complete later</string>
    <string name="finish_add_new"><![CDATA[Finish & add new]]></string>
    <string name="finish">Finish</string>
    <string name="skip">Skip</string>
    <string name="reschedule">Reschedule</string>
</resources>