<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="presenter"
            type="com.dhis2.usescases.about.AboutPresenter" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/aboutApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_app"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appSDK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_sdk"
                app:layout_constraintTop_toBottomOf="@id/aboutApp" />

            <TextView
                android:id="@+id/aboutMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_more"
                app:layout_constraintTop_toBottomOf="@id/appSDK"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/about_connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_connected"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/aboutMore" />

            <TextView
                android:id="@+id/about_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_user"
                app:layout_constraintTop_toBottomOf="@id/about_connected" />

            <TextView
                android:id="@+id/AboutGit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_git"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/about_user" />

            <TextView
                android:id="@+id/aboutDev"
                android:layout_width="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/about_dev"
                app:layout_constraintTop_toBottomOf="@id/AboutGit" />


            <TextView
                android:id="@+id/AboutContact"
                android:layout_width="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:text="@string/about_contact"
                app:layout_constraintTop_toBottomOf="@id/aboutDev" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
