<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="org.dhis2.utils.custom_views.FormBottomDialog.ActionType" />

        <import type="android.view.View" />

        <variable
            name="listener"
            type="org.dhis2.utils.custom_views.OnFormBottomDialogItemSelection" />

        <variable
            name="canComplete"
            type="java.lang.Boolean" />

        <variable
            name="reopen"
            type="java.lang.Boolean" />

        <variable
            name="skip"
            type="java.lang.Boolean" />

        <variable
            name="reschedule"
            type="java.lang.Boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="end">

            <TextView
                android:id="@+id/finishAndAddNew"
                style="@style/BottomDialogItem"
                android:onClick="@{()->listener.onActionSelected(ActionType.FINISH_ADD_NEW)}"
                android:text="@string/finish_add_new"
                android:visibility="@{canComplete?View.GONE:View.VISIBLE}" />

            <TextView
                android:id="@+id/skip"
                style="@style/BottomDialogItem"
                android:onClick="@{()->listener.onActionSelected(ActionType.SKIP)}"
                android:text="@string/skip"
                android:visibility="@{skip?View.VISIBLE:View.GONE}" />

            <TextView
                android:id="@+id/reopen"
                style="@style/BottomDialogItem"
                android:onClick="@{()->listener.onActionSelected(ActionType.REOPEN)}"
                android:text="@string/re_open"
                android:visibility="@{reopen?View.VISIBLE:View.GONE}" />

            <TextView
                android:id="@+id/reschedule"
                style="@style/BottomDialogItem"
                android:onClick="@{()->listener.onActionSelected(ActionType.RESCHEDULE)}"
                android:text="@string/reschedule"
                android:visibility="@{reschedule?View.VISIBLE:View.GONE}" />

            <TextView
                android:id="@+id/complete"
                style="@style/BottomDialogItem"
                android:onClick="@{()->listener.onActionSelected(ActionType.COMPLETE)}"
                android:text="@string/complete"
                android:visibility="@{canComplete?View.VISIBLE:View.GONE}" />

            <TextView
                android:id="@+id/completeAndAddNew"
                style="@style/BottomDialogItem"
                android:onClick="@{()->listener.onActionSelected(ActionType.COMPLETE_ADD_NEW)}"
                android:text="@string/complete_add_new"
                android:visibility="@{canComplete?View.VISIBLE:View.GONE}" />

            <TextView
                android:id="@+id/completeLater"
                style="@style/BottomDialogItem"
                android:onClick="@{()->listener.onActionSelected(ActionType.COMPLETE_LATER)}"
                android:text="@string/complete_later"
                android:visibility="@{canComplete?View.VISIBLE:View.GONE}" />

            <TextView
                android:id="@+id/finish"
                style="@style/BottomDialogItem"
                android:onClick="@{()->listener.onActionSelected(ActionType.FINISH)}"
                android:text="@string/finish"
                android:visibility="@{canComplete?View.GONE:View.VISIBLE}" />
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>