<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_white_f9f">

            <EditText
                android:id="@+id/edit_note"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="9dp"
                android:layout_marginStart="9dp"
                android:background="@drawable/gray_border_box"
                android:fadeScrollbars="true"
                android:gravity="start"
                android:hint="@string/write_new_note"
                android:inputType="textMultiLine"
                android:maxHeight="200dp"
                android:overScrollMode="always"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:textColor="@color/gray_444"
                android:textColorHighlight="?colorPrimary"
                android:textColorHint="@color/gray_d7d"
                android:textCursorDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/lorem/random" />

            <Button
                android:id="@+id/button_delete"
                style="@style/ButtonRoundedGrey"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="9dp"
                android:layout_marginTop="16dp"
                android:text="@string/clear"
                app:backgroundTint="@color/red_060"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_note" />

            <Button
                android:id="@+id/button_add"
                style="@style/ButtonRoundedGrey"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_note"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/button_delete"
                app:layout_constraintTop_toBottomOf="@id/edit_note" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/notes_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@android:color/white"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_add"
                tools:listitem="@layout/item_notes" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>